# queue-system

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  tablo-prototip.html  tailwind.preset.js  tsconfig.base.json  turbo.json  НГПИ-новый-дизайн.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
backend/accounts/: models.py  permissions.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_counter.py  0003_user_hall_alter_user_role.py
backend/catalog/: admin.py  models.py  serializers.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_service_is_popular.py  0003_hall_alter_servicecategory_code_servicecategory_hall_and_more.py  0004_hall_name_en_hall_name_uz_service_name_en_and_more.py
backend/config/: asgi.py  settings.py  urls.py
backend/queue_app/: admin.py  apps.py  audit.py  consumers.py  models.py  realtime.py  routing.py  serializers.py  services.py  sync.py  sync_client.py  views.py  ws_auth.py
backend/queue_app/migrations/: 0001_initial.py  0002_dailycounter_operatorsession_ticket.py  0003_displaysettings.py  0004_alter_dailycounter_unique_together_counter_hall_and_more.py  0005_auditlog.py  0006_ticket_finished_at.py  0007_operatorsession_updated_at_ticket_updated_at.py  0008_displaysettings_org_name_displaysettings_ticker_text_and_more.py  0009_workschedule.py  0010_syncstate.py  0011_voiceclip.py
backend/queue_app/tests/: conftest.py  test_api.py  test_realtime.py  test_sync.py  (+2 more)
(+225 files in other folders)
