[project]
name = "queue-backend"
version = "0.1.0"
description = "NDPI electronic queue — Django 6 API"
authors = [{ name = "Kanat" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0,<6.1)",
    "djangorestframework (>=3.16,<4.0)",
    "djangorestframework-simplejwt (>=5.5,<6.0)",
    "drf-spectacular (>=0.28,<0.29)",
    "psycopg[binary] (>=3.2,<4.0)",
    "django-cors-headers (>=4.6,<5.0)",
    "django-environ (>=0.12,<0.13)",
    "channels (>=4.3.2,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<9.0"
pytest-django = ">=4.9,<5.0"
model-bakery = ">=1.20,<2.0"
pytest-asyncio = "^1.4.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py", "*_test.py"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
